--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@webonnx/wonnx-wasm": "0.5.0",
     "autoprefixer": "10.4.14",
     "copy-webpack-plugin": "^11.0.0",
     "encoding": "^0.1.13",
